# MinQtShellWidget

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qshell.cpp  qshell.h
